	  The Kinetis GPIO logic had some of the same issues as did the
	  Kinetis L (2013-5-6).
	* arch/arm/src/stm32/stm32_idle.c: Add an option to conditionally disable
	  the "wfi" sleep mode.  This is needed with certain JTAG debuggers to
	  to prevent the debug session from begin disconnected.  From Ken Pettit
	  (2013-5-7).
	* configs/mikroe-stm32f4/fulldemo/, nx/, nxlines/, nxtext/:  Add more
	  configurationsf for the Mikroelektronika Multimedia STM32-M4 board.
	  From Ken Pettit (2013-5-7).
	* configs/mikroe-stm32f4/src/up_mio283qt2.c and other files:  Integrate the
	  MIO283QT2 display on the Mikroelektronika Multimedia STM32-M4 board.
	  From Ken Pettit (2013-5-7).
	* arch/arm/src/lpc17xx/lpc17_i2c.c:  Fix for lpc17xx i2c single byte read
	  timeout error problem from M.Kannan (2013-5-8).
	* arch/arm/src/stm32/stm32_adc.c:  Typo in F2/F4 specific logic:  ACD_
	  instead of ADC_.  From Ken Pettit (2014-5-8).
	* configs/olimex-lpc1766stk/tools:  Tweaks to support OpenOCD-0.70
	  (2013-5-10).
	* configs/mikroe-stm32f4:  Changes to get the Mikroelektronika MultiMedia
	  STM32 F4 touchsceen working.  From Ken Pettit (2013-5-11).
	* configs/*/nxwm:  Default priorities for NxWidget and NxWM threads
	  should be 100, not 50, to be consistent with other default priorities.
	* configs/hymini-stm32v/buttons, nsh, and nsh2:  Configurations converted
	  to use the kconfig-frontends tools (Laurent Latil, 2013-5-14)
	* configs/hymini-stm32v/src:  Converted to use the common SSD1289 driver
	  (Laurent Latil, 2013-5-14)
	* configs/hymini-stm32v/ostest and usbnsh:  Add OS test and USB/NSH
	  configurations (Laurent Latil, 2013-5-14).
	* configs/hymini-stm32v/src/up_nsh.c:  Add support for the card detect
	  (CD) interrupt (Laurent Latil, 2013-5-14).
	* configs/hymini-stm32v/src/nx and nxlines:  Removed these configurations
	  (Laurent Latil, 2013-5-14).
	* arch/arm/src/stm32/chip/stm32f10xx_dma.h:  Fix some bad DMA register
	  definitions.  From Laurent Latil (2013-5-15).