@@ -843,7 +843,7 @@ CONFIG_NSH_CONSOLE=y
 #
 # CONFIG_NSH_USBDEV_TRACE is not set
 # CONFIG_NSH_CONDEV is not set
-# CONFIG_NSH_ARCHINIT is not set
+CONFIG_NSH_ARCHINIT=y
 
 #
 # NxWidgets/NxWM
